--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "resolve-pathname": "^2.2.0",
     "url": "^0.11.0"
   },
   "scripts": {
